# gravedigger

./: .env  .gitignore  .pre-commit-config.yaml  LICENSE  LICENSE.txt  Makefile  README.md  TODO.md  db.py  getgraveids.py  input.txt  pyproject.toml  requirements-to-freeze.txt  requirements.txt  setup.py
.github/workflows/: python-package.yml
gravedigger/: db.py  getgraveids.py  gravedigger.py  soup.py
graver/: __init__.py  app.py  cemetery.py  cli.py  constants.py  db.py  graver.py  memorial.py  models.py  page.py  parsers.py  soup.py
src/: __version__.py  gravedigger.py
src/graver/: __init__.py  api.py  cli.py  constants.py  parsers.py
tests/: asimov.html  conftest.py  memorial_provider.py  requirements.txt  shoulders.html  test.py  test_api.py  test_cemetery.py  test_cli.py  test_gravedigger.py  test_graver.py  test_memorial.py  test_soup.py
tests/data/: arlington-national-cemetery.html  arlington-page-1.html  arlington-page-2.html  cem-3136.html  grace-hopper-search-results.html  hopper.html  james-fenimore-cooper-search-results.html  jefferson.html  john-j-pershing.html  john-pershing-1948-search-result.html  jqa-cenotaph.html  martin-luther-king.html  merged.html  monticello-famous.html  monticello-graveyard.html  monticello-plot-info.html  monticello-vets.html  morrison.html  ritchie.html
tests/fixtures/cassettes/: tests.test_api.TestCemetery.test_cemetery[expected0].json  tests.test_api.TestMemorial.test_memorial_parse[andrew-jackson].json  tests.test_api.TestMemorial.test_memorial_parse[carl-sagan].json  tests.test_api.TestMemorial.test_memorial_parse[dennis-macalistair-ritchie].json  tests.test_api.TestMemorial.test_memorial_parse[george-washington].json  tests.test_api.TestMemorial.test_memorial_parse[grace-brewster-hopper].json  tests.test_api.TestMemorial.test_memorial_parse[isaac-asimov].json  tests.test_api.TestMemorial.test_memorial_parse[john-j-pershing].json  tests.test_api.TestMemorial.test_memorial_parse[john-quincy-adams].json  tests.test_api.TestMemorial.test_memorial_parse[martin-luther-king].json  tests.test_api.TestMemorial.test_memorial_parse[rod-serling].json  tests.test_api.TestMemorial.test_memorial_parse[thomas-jefferson].json  tests.test_api.TestMemorial.test_memorial_parse_raises_exception_on_unexpected_404[https---www.findagrave.com-memorial-should-produce-404].json  tests.test_api.TestMemorial.test_memorial_parser_removed_raises_exception[https---www.findagrave.com-memorial-261491035-dolores-higginbotham].json  tests.test_api.TestSearch.test_gpsfilter[gps].json  tests.test_api.TestSearch.test_gpsfilter[nogps].json  tests.test_api.TestSearch.test_non_bool_filters[gpsfilter-gps].json  tests.test_api.TestSearch.test_non_bool_filters[gpsfilter-nogps].json  tests.test_api.TestSearch.test_non_bool_filters[photofilter-nophotos].json  tests.test_api.TestSearch.test_non_bool_filters[photofilter-photos].json  tests.test_api.TestSearch.test_search[person0].json  tests.test_api.TestSearch.test_search[person1].json  tests.test_api.TestSearch.test_search_bool_parameters[cenotaph-False].json  tests.test_api.TestSearch.test_search_bool_parameters[cenotaph-True].json  tests.test_api.TestSearch.test_search_bool_parameters[famous-False].json  tests.test_api.TestSearch.test_search_bool_parameters[famous-True].json  tests.test_api.TestSearch.test_search_bool_parameters[flowers-False].json  tests.test_api.TestSearch.test_search_bool_parameters[flowers-True].json  tests.test_api.TestSearch.test_search_bool_parameters[hasPlot-False].json  tests.test_api.TestSearch.test_search_bool_parameters[hasPlot-True].json  tests.test_api.TestSearch.test_search_bool_parameters[isVeteran-False].json  tests.test_api.TestSearch.test_search_bool_parameters[isVeteran-True].json  tests.test_api.TestSearch.test_search_bool_parameters[monument-False].json  tests.test_api.TestSearch.test_search_bool_parameters[monument-True].json  tests.test_api.TestSearch.test_search_bool_parameters[noCemetery-False].json  tests.test_api.TestSearch.test_search_bool_parameters[noCemetery-True].json  tests.test_api.TestSearch.test_search_bool_parameters[sponsored-False].json  tests.test_api.TestSearch.test_search_bool_parameters[sponsored-True].json  tests.test_api.TestSearch.test_search_cemetery[monticello-graveyard-18].json  tests.test_api.TestSearch.test_search_cemetery_all[https---www.findagrave.com-cemetery-2783285-rachel-levy-gravesite-memorial_dict0].json  (+20 more)
tests/fixtures/cemeteries/: arlington-national-cemetery.json  crown-hill-memorial-park.json  monticello-graveyard.json
tests/fixtures/memorials/: andrew-jackson.json  carl-sagan.json  dennis-macalistair-ritchie.json  george-washington.json  grace-brewster-hopper.json  isaac-asimov.json  james-fenimore-cooper.json  john-j-pershing.json  john-quincy-adams.json  martin-luther-king.json  rachel-machado-levy.json  rod-serling.json  thomas-jefferson.json
tests/fixtures/vcr_cassettes/: 404-cemetery.yaml  404-memorial.yaml  andrew-jackson.yaml  arlington-national-cemetery-search-results.yaml  carl-sagan.yaml  cemetery-monticello-graveyard.yaml  crown-hill-memorial-park.yaml  dennis-macalistair-ritchie.yaml  george-washington.yaml  grace-brewster-hopper.yaml  isaac-asimov.yaml  jacob-wolf.yaml  james-fenimore-cooper-search-results.yaml  john-j-pershing-search-results.yaml  john-j-pershing.yaml  john-quincy-adams.yaml  martin-luther-king.yaml  rod-serling.yaml  synopsis.yaml  test-cli-scrape-file.yaml  test-search-cemetery-monticello-vets.yaml  test-search-monticello-cemetery-famous-vets.yaml  test_cemetery_search-cemetery-641519-p3.yaml  test_cemetery_search_all-rachel-levy-gravesite.yaml  test_cemetery_search_max_results.yaml  (+46 more)
tests/integration/: test_app_main.py  test_cli.py  test_cli_app.py  test_memorial_parser.py  test_memorial_scrape.py  test_scrape_grave.py
tests/unit/: dolores-maiden.html  merged.html  test_app.py  test_cli.py  test_graver.py  test_memorial.py  test_model.py  test_page.py  test_parsers.py  test_soup.py
