[build-system]
requires = ["graver"]
build-backend = "poetry.core.masonry.api"

[project]
name = "graver"
dynamic = ["version", "description"]
authors = [{ name = "Larry McQueary", email = "contact@mcqueary.org" }]
classifiers = [
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
]
requires-python = ">=3.8"
dependencies = ["beautifulsoup4==4.12.2", "lxml==4.9.3", "tqdm==4.66.1", "typer==0.9.0"]

[project.optional-dependencies]
dev = ["black", "isort"]
test = ["coveralls", "flake8", "isort", "pytest", "faker", "coverage", "pytest-cov"]
deploy = ["python-semantic-release"]
[project.urls]
Home = "https://github.com/mcqueary/graver"

[tool.setuptools.dynamic]
version = {attr = "package.__version__"}

[tool.commitizen]
name = "cz_conventional_commits"
version = "0.1.0"
version_files = [
    "src/__version__.py",
    "pyproject.toml:version"
]
update_changelog_on_bump = true
style = [
    ["qmark", "fg:#ff9d00 bold"],
    ["question", "bold"],
    ["answer", "fg:#ff9d00 bold"],
    ["pointer", "fg:#ff9d00 bold"],
    ["highlighted", "fg:#ff9d00 bold"],
    ["selected", "fg:#cc5454"],
    ["separator", "fg:#cc5454"],
    ["instruction", ""],
    ["text", ""],
    ["disabled", "fg:#858585 italic"]
]

[tool.poetry]
name = "graver"
version = "0.1.0"
description = ""
authors = ["Larry McQueary <contact@mcqueary.org>"]
readme = "README.md"
packages = [{include = "graver"}]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.scripts]
graver = "graver.cli:app"


